Added programming section, updated format

--- a/index.html
+++ b/index.html
@@ -13,67 +13,68 @@
             <header>
                 <h3>Intro</h3>
             </header>
-            <main>
-                <p>Hello there! I'm Christopher Rempe, and for my first assignment I thought I would introduce myself. I recently
-                </br>graduated with a bachelor's in computer science from Western Washington University and am working on my
-                </br>next steps in life.</p>
-            </main>
+            <p>Hello there! I'm Christopher Rempe, and for my first assignment I thought I would introduce myself. I recently
+            <br>graduated with a bachelor's in computer science from Western Washington University and am working on my
+            <br>next steps in life.</p>
         </section>
 
         <section>
             <header>
                 <h3>Interests</h3>
             </header>
-            <main>
-                <p>I am someone with many different interests that I either enjoy doing, or learning about. Here are some of them:</p>
-                <ul>
-                    <li>Technology</li>
-                    <li>Photography</li>
-                    <li>Music</li>
-                    <li>Transportation</li>
-                    <li>Snowboarding</li>
-                </ul>
-            </main>
+            <p>I am someone with many different interests that I either enjoy doing, or learning about. Here are some of them:</p>
+            <ul>
+                <li>Technology</li>
+                <li>Photography</li>
+                <li>Music</li>
+                <li>Transportation</li>
+                <li>Snowboarding</li>
+            </ul>
         </section>
 
         <section>
             <header>
                 <h3>Photography</h3>
             </header>
-            <main>
-                <p>Photography has become a passion of mine since I started to use my iPhone's camera to take pictures in high school.
-                    </br>Since then you'd be hard pressed to find me out on a trail without a camera in my hand. Here are some of my
-                    </br>personal favorites from the past 5 1/2 years.</p>
-                <figure>
-                    <img src="photos/GenericSeattle.jpg"
-                        alt="Stereotypical Seattle">
-                    <figcaption>A stereotypical photo of the Space Needle and a ferry.</figcaption>
-                </figure>
-                <figure>
-                    <img src="photos/MammothHotSprings.jpg"
-                        alt="Mammoth Hot Springs, Yellowstone">
-                    <figcaption>A photo taken at the Mammoth Hot Springs in Yellowstone.</figcaption>
-                </figure>
-                <figure>
-                    <img src="photos/GraffitiWindow.jpg"
-                        alt="Graffiti Window">
-                    <figcaption>Some graffiti through a window.</figcaption>
-                </figure>
-            </main>
+            <p>Photography has become a passion of mine since I started to use my iPhone's camera to take pictures in high school.
+                <br>Since then you'd be hard pressed to find me out on a trail without a camera in my hand. Here are some of my
+                <br>personal favorites from the past 5 1/2 years.</p>
+            <figure>
+                <img src="photos/GenericSeattle.jpg"
+                    alt="Stereotypical Seattle">
+                <figcaption>A stereotypical photo of the Space Needle and a ferry.</figcaption>
+            </figure>
+            <figure>
+                <img src="photos/MammothHotSprings.jpg"
+                    alt="Mammoth Hot Springs, Yellowstone">
+                <figcaption>A photo taken at the Mammoth Hot Springs in Yellowstone.</figcaption>
+            </figure>
+            <figure>
+                <img src="photos/GraffitiWindow.jpg"
+                    alt="Graffiti Window">
+                <figcaption>Some graffiti through a window.</figcaption>
+            </figure>
         </section>
 
         <section>
             <header>
-                <h3>Coding</h3>
+                <h3>Programming</h3>
             </header>
-            <main>
-                <p>While going to WWU I discovered that I was more passionate about front-end development than back-end. 
-                </br>Sadly, Western did not offer that many front-end classes that counted toward my graduation, so I took it</br>upon myself to learn. 
-                    My most recent website is an overhaul of my personal site, which I have embedded</br>below, because why not? 
-                    I think that this was the site that I made me want to learn more about the fundementals</br>of website building since I felt like 
-                    I was just throwing stuff together to see what worked.</p>
-                <iframe src="https://crrempe.com" title="My personal website" width="90%" height="450px" loading="lazy"></iframe>
-            </main>
+            <p>I've been interested in programming through a friend in junor high, but after a couple of attemps at learning
+                <br>(including taking a IDTech week Java bootcamp) it didn't click. That was until I took a required C++ class
+                <br>at Western. I was originally going after an EE degree, but everything just clicked in that C++ class and I
+                <br>was having a lot of fun programming. After taking a Python class to make sure I really did like, and
+                <br>understood what was being taught, I switched my major over to CS. From doing the bomb lab, to creating a
+                <br>panorama sticher that made 90's alt rock album covers instead, to coding an operating system's kernel, the
+                <br>journey was not easy. And from that journey, I learned that I perfer working on front-end development
+                <br>compared to back-end. </p>
+
+                <p>The problem is that Western did not have a lot of classes that was both front-end, and counted towards my
+                <br>degree, so I had to teach myself. While I am proud of the websites I have created, I know that most of the
+                <br>sites are build on top of a pile of random information from the web I've found, and that I want a strong
+                <br>foundation for that pile, hense taking this certification course. I have embedded my latest revision of my
+                <br>personal site (<a href="https://crrempe.com">crrempe.com</a>) becasue why not?</p>
+            <iframe src="https://crrempe.com" title="My personal website" width="90%" height="450" loading="lazy"></iframe>
         </section>
 
         <footer>
