--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <br>sites are build on top of a pile of random information from the web I've found, and that I want a strong
                 <br>foundation for that pile, hense taking this certification course. I have embedded my latest revision of my
                 <br>personal site (<a href="https://crrempe.com">crrempe.com</a>) becasue why not?</p>
-            <iframe src="https://crrempe.com" title="My personal website" width="90%" height="450" loading="lazy"></iframe>
+            <iframe src="https://crrempe.com" title="My personal website" width="1150" height="550" loading="lazy"></iframe>
         </section>
 
         <footer>
